feature: added delete role feature
